--- a/front/style.css
+++ b/front/style.css
@@ -1,3 +1,14 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
 
+.footer {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  height: 50px;
+}
 
 /*# sourceMappingURL=style.css.map */
